feat(server): add documentation to google oauth2 login
